# BUILD for infiniband-exporter

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/koshieguchi/sakura-exporter
gazelle(name = "gazelle")

# BUILD for pcm-exporter
load("@rules_foreign_cc//:foreign_cc/cmake.bzl", "cmake_external")

cmake_external(
   name = "pcm",
   # Values to be passed as -Dkey=value on the CMake command line;
   # here are serving to provide some CMake script configuration options
  #  cache_entries = {
  #      "NOFORTRAN": "on",
  #      "BUILD_WITHOUT_LAPACK": "no",
  #  },
   lib_source = "@pcm//:all",

   # We are selecting the resulting static library to be passed in C/C++ provider
   # as the result of the build;
   # However, the cmake_external dependants could use other artifacts provided by the build,
   # according to their CMake script
   static_libraries = ["libpcm.a"],
)


