load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "infiniband_lib",
    srcs = ["infiniband-exporter.go"],
    importpath = "github.com/koshieguchi/sakura-exporter/infiniband",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_procfs//sysfs",
    ],
)

go_binary(
    name = "infiniband",
    embed = [":infiniband_lib"],
    visibility = ["//visibility:public"],
)
